--- a/docs/C-C++/函数.md
+++ b/docs/C-C++/函数.md
@@ -1,3 +1,32 @@
 # 函数
 
 ## 函数是什么？
+
+数学中我们常见到函数的概念。但是你了解C语言中的函数吗？ 维基百科中对函数的定义：子程序
+
++ 在计算机科学中，子程序（英语：Subroutine, procedure, function, routine, method,
+subprogram, callable unit），是一个大型程序中的某部分代码， 由一个或多个语句块组
+成。它负责完成某项特定任务，而且相较于其他代 码，具备相对的独立性。
++ 一般会有输入参数并有返回值，提供对过程的封装和细节的隐藏。这些代码通常被集成为软
+件库。
+
+C语言中函数的分类: 
+1. 库函数
+2. 自定义函数
+
+## 库函数
+为什么会有库函数？
+
+1. 我们知道在我们学习C语言编程的时候，总是在一个代码编写完成之后迫不及待的想知道结果，想
+把这个结果打印到我们的屏幕上看看。这个时候我们会频繁的使用一个功能：将信息按照一定的格
+式打印到屏幕上（printf）。
+2. 在编程的过程中我们会频繁的做一些字符串的拷贝工作（strcpy）。
+3. 在编程是我们也计算，总是会计算n的k次方这样的运算（pow）。
+
+像上面我们描述的基础功能，它们不是业务性的代码。我们在开发的过程中每个程序员都可能用的到，
+为了支持可移植性和提高程序的效率，所以C语言的基础库中提供了一系列类似的库函数，方便程序员
+进行软件开发。
+
+那怎么学习库函数呢？
+
+这里我们简单的看看：
